5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1590_2895.log
== TEST (2019-03-25 13:44:43) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (valor * Quantidade) + frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (valor * Quantidade) + frete
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:45:21) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (valor * Quantidade) + frete

print(total)

-- EXECUTION TIME:
0.22467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = (valor * Quantidade) + frete
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:45:42) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (100.0 * Quantidade) + frete

print(total)

-- OUTPUT:
1278.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:45:44) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (100.0 * Quantidade) + frete

print(total)

-- EXECUTION TIME:
0.155645
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1278.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1095.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24921.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:45:44) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (100.0 * Quantidade) + frete

print(total)

-- OUTPUT:
1278.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:45:52) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (100.0 * Quantidade) + frete

print(total)

-- EXECUTION TIME:
0.169296
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1278.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1095.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24921.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:45:57) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (100.0 * Quantidade) + frete

print(total)

-- OUTPUT:
1278.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:46:05) 
-- CODE:
Quantidade = float(input("A quantidade de jogos a serem encomendados"))
Valor = float(input("O valor unitário de cada jogo?"))
frete = input = float(input("O valor do frete?"))

total = (100.0 * Quantidade) + frete

print(total)

-- EXECUTION TIME:
0.175684
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1278.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1095.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24921.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:15) 
-- CODE:
Valor = float(input("O valor unitário de cada jogo?"))

total = (valor * 40) + 45

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = (valor * 40) + 45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:21) 
-- CODE:
Valor = float(input("O valor unitário de cada jogo?"))

total = (valor * 40) + 45

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = (valor * 40) + 45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:27) 
-- CODE:
Valor = float(input("O valor unitário de cada jogo?"))

total = (valor * 40) + 45

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = (valor * 40) + 45
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:59) 
-- CODE:
Valor = float(input("O valor unitário de cada jogo?"))

total = (valor * 5) + 40

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = (valor * 5) + 40
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:48:43) 
-- CODE:
Valor = float(input("100.0"))

total = (Valor * 5) + 40

print(total)

-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:48:46) 
-- CODE:
Valor = float(input("100.0"))

total = (Valor * 5) + 40

print(total)

-- EXECUTION TIME:
0.179781
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
100.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
90.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1270.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:49:14) 
-- CODE:
Valor = float(input("100.0"))

total = (Valor * 5) + 40.0

print(total)

-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:49:15) 
-- CODE:
Valor = float(input("100.0"))

total = (Valor * 5) + 40.0

print(total)

-- EXECUTION TIME:
0.146846
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
100.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
90.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1270.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:15) 
-- CODE:
Valor = float(input("100.0"))
Frete = float(input("40.0"))
Quantidade = float(input("5"))

total = (Valor * Quantidade) + Frete

print(total)

-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:51:16) 
-- CODE:
Valor = float(input("100.0"))
Frete = float(input("40.0"))
Quantidade = float(input("5"))

total = (Valor * Quantidade) + Frete

print(total)

-- EXECUTION TIME:
0.177426
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:52:00) 
-- CODE:
Valor = float(input("100.0"))
Frete = float(input("40.0"))
Quantidade = float(input("5.0"))

total = (Valor * Quantidade) + Frete

print(total)

-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:52:02) 
-- CODE:
Valor = float(input("100.0"))
Frete = float(input("40.0"))
Quantidade = float(input("5.0"))

total = (Valor * Quantidade) + Frete

print(total)

-- EXECUTION TIME:
0.276692
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:52:25) 
-- CODE:
Valor = float(input("100.0"))
Frete = float(input("40.0"))
Quantidade = input("5")

total = (Valor * Quantidade) + Frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (Valor * Quantidade) + Frete
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:52:27) 
-- CODE:
Valor = float(input("100.0"))
Frete = float(input("40.0"))
Quantidade = input("5")

total = (Valor * Quantidade) + Frete

print(total)

-- EXECUTION TIME:
0.140192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = (Valor * Quantidade) + Frete
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:53:40) 
-- CODE:
Valor=input = float(input("100.0"))
Frete=input = float(input("40.0"))
Quantidade=input = float(input("5"))

total = (Valor * Quantidade) + Frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Frete=input = float(input())
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:53:41) 
-- CODE:
Valor=input = float(input("100.0"))
Frete=input = float(input("40.0"))
Quantidade=input = float(input("5"))

total = (Valor * Quantidade) + Frete

print(total)

-- EXECUTION TIME:
0.169773
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    Frete=input = float(input())
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:53:41) 
-- CODE:
Valor=input = float(input("100.0"))
Frete=input = float(input("40.0"))
Quantidade=input = float(input("5"))

total = (Valor * Quantidade) + Frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Frete=input = float(input())
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:53:42) 
-- CODE:
Valor=input = float(input("100.0"))
Frete=input = float(input("40.0"))
Quantidade=input = float(input("5"))

total = (Valor * Quantidade) + Frete

print(total)

-- EXECUTION TIME:
0.13057
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    Frete=input = float(input())
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:54:14) 
-- CODE:
Valor=input = float(input("100.0"))



total = (Valor * 8) + 40

print(total)

-- OUTPUT:
136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:54:15) 
-- CODE:
Valor=input = float(input("100.0"))



total = (Valor * 8) + 40

print(total)

-- EXECUTION TIME:
0.140982
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
136.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
120.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2008.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:54:44) 
-- CODE:
Valor=input = float(input("99.9"))

total = (Valor * 8) + 40

print(total)

-- EXECUTION TIME:
0.151727
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
136.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
120.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2008.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:59:10) 
-- CODE:
Valor=input = float(input("99.9"))

total = (Valor * 8) + 40

print(total)

-- OUTPUT:
136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:59:14) 
-- CODE:
Valor=input = float(input("99.9"))

total = (Valor * 8) + 40

print(total)

-- OUTPUT:
136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:59:15) 
-- CODE:
Valor=input = float(input("99.9"))

total = (Valor * 8) + 40

print(total)

-- EXECUTION TIME:
0.273058
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
136.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
120.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2008.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:59:16) 
-- CODE:
Valor=input = float(input("99.9"))

total = (Valor * 8) + 40

print(total)

-- OUTPUT:
136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:59:20) 
-- CODE:
Valor=input = float(input("99.9"))

total = (Valor * 8) + 40

print(total)

-- EXECUTION TIME:
0.155675
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
136.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
120.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2008.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:09:08) 
-- CODE:
Valor=input = float(input("99.9"))
Quantidade = float(input("8.0"))


total = (Valor * Quantidade) + 40

print(total)

-- EXECUTION TIME:
0.137226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    Quantidade = float(input())
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:23:05) 
-- CODE:
Valor = input("jogos:")
Quantidade = input("quntidade:")
frete = float(input("frete:"))

total = float(Valor)*float(Quantidade)+float(frete)

print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:23:21) 
-- CODE:
Valor = input("jogos:")
Quantidade = input("quntidade:")
frete = float(input("frete:"))

total = float(Valor)*float(Quantidade)+float(frete)

print(total)

-- EXECUTION TIME:
0.164762
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:02) 
-- CODE:
Valor = input("jogos:")
Quantidade = input("quntidade:")
frete = input("frete:")

total = float(Valor)*float(Quantidade)+float(frete)

print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:39:24) 
-- CODE:
Valor = input("jogos:")
Quantidade = input("quntidade:")
frete = input("frete:")

total = float(Valor)*float(Quantidade)+float(frete)

print(total)

-- EXECUTION TIME:
0.118263
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
